2006-01-23  Rick Moseley  <rmoseley@redhat.com>

	* Delete the images/__MACOSX/icon/._.DS_Store file.

2006-01-18  Rick Moseley  <rmoseley@redhat.com>

	* Added frysk.desktop here.
	* frysk.desktop: changed icon name to fryskTrayIcon48.png.

2006-01-16  Rick Moseley  <rmoseley@redhat.com>

	* Actually add the icons this time.

2006-01-13  Rick Moseley  <rmoseley@redhat.com>

	* Added images/48 directory.
	* Added images/xx/fryskTrayIconxx.png files for startup sequence.

2006-01-12  Adam Jocksch  <ajocksch@redhat.com>

	* glade/frysk_source.glade: removed requires gnome tag.

2005-12-20  Adam Jocksch  <ajocksch@redhat.com>

	* glade/frysk_source_prefs.glade: Added area for the number of inlined
	scopes to display under the settings tab.

2005-12-19  Adam Jocksch  <ajocksch@redhat.com>

	* FryskGui.java (mainGui): Now uses refactored TrayIcon constructor.

2005-12-15  Adam Jocksch  <ajocksch@redhat.com>

	* FryskGui.java (mainGui): Added tray icon.

2005-12-14  Adam Jocksch  <ajocksch@redhat.com>

	* FryskGui.java (mainGui): Now initializes IconManager.

	* images: Removed old images and added new icons and images.

2005-12-10  Sami Wagiaalla  <swagiaal@redhat.com>

	* glade/procpop.glade: Renamed a few widgets. Added action
	point TreeView.

2005-12-08  Sami Wagiaalla  <swagiaal@redhat.com>

	* glade/procpop.glade: Fixed
	http://sourceware.org/bugzilla/show_bug.cgi?id=1999

2005-11-24  Sami Wagiaalla  <swagiaal@redhat.com>

	* glade/procpop.gladep: Renamed {delete/add}CustomObserver buttons.

2005-11-18  Sami Wagiaalla  <swagiaal@redhat.com>

	* glade/procpop.glade: Renamed Custom Event Observer TreeViews.
	Removed all filter widgets (using FilterWidget instead).

2005-11-17  Sami Wagiaalla  <swagiaal@redhat.com>

	* glade/procpop.glade: Added add/remove buttons to CreatCustomObserver
	window.

2005-11-15  Sami Wagiaalla  <swagiaal@redhat.com>

	* glade/procpop.glade: Added menu items for adding observers
	and creating custom observers.
